syntax = "proto3";

package proto;
import "agent.proto";
service UserCenterService {
    // 校验授权
    rpc CheckAuth(AuthArgs) returns (AuthRes){}
}


message AuthArgs{
    proto.BaseReq base_req =1;
    int64 user_id =2;
    string token =3;
}
message AuthRes{
    int32 ret = 1;
    string msg = 2;
}


